Retune subsampling grid and resource defaults

--- a/config/pipeline.env
+++ b/config/pipeline.env
@@ -26,20 +26,32 @@ SCORE_PARTITION=day
 AGG_PARTITION=day
 
 ALL_CPUS=16
-ALL_MEM=96G
-ALL_TIME=08:00:00
+ALL_MEM=64G
+ALL_TIME=24:00:00
+
+SMOKE_ALL_CPUS=4
+SMOKE_ALL_MEM=32G
+SMOKE_ALL_TIME=24:00:00
 
 COMBINE_CPUS=4
 COMBINE_MEM=32G
 COMBINE_TIME=01:00:00
 
 SCORE_CPUS=4
-SCORE_MEM=32G
+SCORE_MEM=8G
 SCORE_TIME=01:00:00
 
+SMOKE_SCORE_CPUS=2
+SMOKE_SCORE_MEM=4G
+SMOKE_SCORE_TIME=01:00:00
+
 AGG_CPUS=2
-AGG_MEM=16G
+AGG_MEM=8G
 AGG_TIME=00:30:00
+
+SMOKE_AGG_CPUS=1
+SMOKE_AGG_MEM=4G
+SMOKE_AGG_TIME=00:30:00
 
 # Standalone genome-build resources.
 BUILD_PARTITION=day
