Add full-density SVG UMAP gallery export

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ __pycache__/
 !runs/.gitkeep
 !results/.gitkeep
 !figures/.gitkeep
+!figures/umap_sample_gallery.html
+!figures/umap_sample_gallery.svg
